test_resources/lit_class/errors/test9.yr
@abstract
class Error over Exception {
    pub self () {}
}

@abstract
class A {
    pub self () {}

    pub fn foo (self)
        throws Error
        ;
}


class B over A {
    pub self () {}

    pub over foo (self) {
    }
}


fn foo ()
    throws Error
{
    let a : &A = copy B ();
    a.foo ();
}

fn bar () {
    let a : &B = copy B ();
    a.foo ();
}
